# alibabacloud-httpdns-c-sdk

./: CHANGELOG.md  CMakeLists.txt  LICENCE  Makefile  README.md  configuration.h.in  http_api_result_demo.md  log
benchmark/: CMakeLists.txt  benchmark.c
examples/: CMakeLists.txt  async_client_cxx_example.cpp  async_client_example.c  async_client_in_linux_example.c  async_resolve_example.c  batch_resolve_example.c  cxx_integration_example.cpp  sdns_resolve_example.c  sync_client_cxx_example.cpp  sync_client_example.c  sync_client_in_linux_example.c  sync_resolve_example.c  sync_server_example.c  sync_server_in_linux_example.c
src/: configuration.h  hdns_api.c  hdns_api.h  hdns_buf.c  hdns_buf.h  hdns_cJSON.c  hdns_cJSON.h  hdns_cache.c  hdns_cache.h  hdns_client.c  hdns_client.h  hdns_config.c  hdns_config.h  hdns_define.h  hdns_file.c  hdns_file.h  hdns_fstack.c  hdns_fstack.h  hdns_http.c  hdns_http.h  hdns_ip.c  hdns_ip.h  hdns_list.c  hdns_list.h  hdns_localdns.c  hdns_localdns.h  hdns_log.c  hdns_log.h  hdns_net.c  hdns_net.h  hdns_platform.h  hdns_resolver.c  hdns_resolver.h  hdns_scheduler.c  hdns_scheduler.h  hdns_session.c  hdns_session.h  hdns_sign.c  hdns_sign.h  hdns_status.c  (+74 more)
tests/: CMakeLists.txt  check_httpdns_cache.c  check_httpdns_client.c  check_httpdns_client_wrapper.c  check_httpdns_config.c  check_httpdns_http.c  check_httpdns_list.c  check_httpdns_localdns.c  check_httpdns_net.c  check_httpdns_net_stack_detector.c  check_httpdns_resolver.c  check_httpdns_response.c  check_httpdns_scheduler.c  check_httpdns_sign.c  check_httpdns_time.c  check_suit_list.h  check_suite_main.c  hello_world.c  httpdns_cache_test.c  httpdns_client_test.c  httpdns_config_test.c  httpdns_http_test.c  httpdns_list_test.c  httpdns_resolver_test.c  httpdns_scheduler_test.c  httpdns_sign_test.c  httpdns_time_test.c  net_stack_detector_test.c  response_parser_test.c  test_hdns_api.c  test_hdns_cache.c  test_hdns_config.c  test_hdns_file.c  test_hdns_http.c  test_hdns_list.c  test_hdns_net.c  test_hdns_scheduler.c  test_hdns_session.c  test_hdns_thread_safe.c  test_hdns_transport.c  (+3 more)
tests/src/: httpdns_cache_test.c  httpdns_client_test.c  httpdns_config_test.c  httpdns_http_test.c  httpdns_resolver_test.c  httpdns_scheduler_test.c  response_parser_test.c
